--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Nothing But Fun
-description: About the Nothing But Fun meetup group, Pensacola, Florida
+description: A bunch of fun seekers in the Greater Pensacola area
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme
